syntax = "proto3";
package pb;
option go_package = "gim/pkg/protocol/pb";

import "google/protobuf/empty.proto";
import "business.ext.proto";

service BusinessInt {
  // 权限校验
  rpc Auth (AuthReq) returns (google.protobuf.Empty);
  // 批量获取用户信息
  rpc GetUser (GetUserReq) returns (GetUserResp);
  // 批量获取用户信息
  rpc GetUsers (GetUsersReq) returns (GetUsersResp);
}

message AuthReq {
  string user_id = 1;
  int64 device_id = 2;
  string token = 3;
}

message GetUsersReq {
  map<string, int32> user_ids = 1; // 用户业务id
}
message GetUsersResp {
  map<string, User> users = 1; // 用户信息
}
